# py-blueprint

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: checks.yml  security.yml
requirements/: README.md  base.txt  dev.txt
scripts/: export_requirements.py
src/: calculadora.py  main.py
src/controllers/: __init__.py  health_controller.py  product_controller.py
src/core/: config.py  decorators.py  exceptions.py
src/core/exceptions/: __init__.py  application_errors.py  error_decorators.py  fastapi_handlers.py
src/core/middleware/: __init__.py  http_logging.py
src/core/settings/: __init__.py  settings.py
src/factories/: __init__.py  product_factory.py
src/models/: product.py
src/repositories/in_memory/: __init__.py  in_memory_product_repository.py
src/repositories/interfaces/: product_repository.py
src/routes/: health.py
src/routes/health/: __init__.py  get.py
src/routes/products/: __init__.py  delete.py  get.py  patch.py  post.py  put.py
src/services/: product_service.py
src/utils/: logger.py
src/views/: product_view.py
tests/: conftest.py  test_calculadora.py
tests/integration/: test_health.py  test_health_api.py  test_products_api.py
tests/unit/: test_decorators.py  test_example.py  test_exceptions.py  test_main.py  test_settings.py
tests/unit/controllers/: test_product_controller.py
tests/unit/core/exceptions/: test_application_errors.py  test_error_decorators.py  test_fastapi_handlers.py
tests/unit/models/: test_product.py
tests/unit/repositories/in_memory/: test_in_memory_product_repository.py
tests/unit/services/: test_product_service.py
