# =================================================================================================
# Project Details
# =================================================================================================
[project]
name = "py-blueprint"
version = "0.1.0"
description = "Add your description here"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Shandryll Stéphano", email = "shandryll94@gmail.com" }]

# =================================================================================================
# Project Dependencies
# =================================================================================================
dependencies = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]


# =================================================================================================
# Ruff Config & Format
# =================================================================================================
[tool.ruff]
line-length = 120
target-version = "py39"
indent-width = 4
fix = true
show-fixes = true
exclude = [
    "venv",
    ".venv",
    "env",
    ".env",
    "__pycache__",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = false
line-ending = "auto"

# =================================================================================================
# Ruff Config - Linter
# =================================================================================================
[tool.ruff.lint]
select = [
    "A",    # flake-8-builtins
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "COM",  # flake8-commas
    "N",    # pep8-naming
    "D",    # pydocstyle
    "E",    # pycodestyle Error
    "F",    # pyflakes
    "I",    # isort
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle Warning
]

ignore = [
    "D100",     # undocumented-public-module
    "D101",     # undocumented-public-class
    "D104",     # undocumented-public-package
    "D106",     # undocumented-public-nested-class
    "D107",     # undocumented-public-init
    "D203",     # one-blank-line-before-class
    "D204",     # incorrect-blank-line-after-class
    "D213",     # multi-line-summary-second-line
    "D413",     # missing-blank-line-after-last-section
    "PLR2004"   # magic-value-comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN201",  # missing-return-type-undocumented-public-function
    "S101"     # assert
]


# =================================================================================================
# Pyright - Typing
# =================================================================================================
[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
include = [
    "src",
    "tests",
]
exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]


# =================================================================================================
# Pytest - Tests
# =================================================================================================
[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]


# ============================
# Build and Setuptools
# ============================
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }
