# =================================================================================================
# Project Details
# =================================================================================================
[project]
name = "py-blueprint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{ name = "Shandryll Stéphano", email = "shandryll94@gmail.com" }]
keywords = ["blueprint", "template", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# =================================================================================================
# Project Dependencies (Runtime only)
# =================================================================================================
dependencies = []

# =================================================================================================
# Optional Dependencies (Dev tools)
# =================================================================================================
[project.optional-dependencies]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

# =================================================================================================
# uv Configuration
# =================================================================================================
[tool.uv]
dev-dependencies = ["dev"]  # Ativa grupo 'dev' automaticamente
package = true              # Instalação editável do projeto local

# =================================================================================================
# Build System
# =================================================================================================
[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }

# =================================================================================================
# Ruff Config
# =================================================================================================
[tool.ruff]
line-length = 120 
target-version = "py311"
indent-width = 4
fix = true
show-fixes = true
exclude = [
    "venv",
    ".venv",
    "env",
    ".env",
    "__pycache__",
    ".git",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "COM",  # flake8-commas
    "N",    # pep8-naming
    "D",    # pydocstyle
    "E",    # pycodestyle Error
    "F",    # pyflakes
    "I",    # isort
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle Warning
]
ignore = [
    "D100",    # undocumented-public-module
    "D101",    # undocumented-public-class
    "D104",    # undocumented-public-package
    "D106",    # undocumented-public-nested-class
    "D107",    # undocumented-public-init
    "D203",    # one-blank-line-before-class
    "D204",    # incorrect-blank-line-after-class
    "D213",    # multi-line-summary-second-line
    "D413",    # missing-blank-line-after-last-section
    "PLR2004", # magic-value-comparison
    "PLE1205", # logging-too-many-args
    "COM812",  # trailing-comma-missing
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

# =================================================================================================
# Pyright - Typing (Fixed)
# =================================================================================================
[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"
pythonPath = ["src"]
include = ["src", "tests"]
exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/__pycache__",
]

# =================================================================================================
# Pytest - Tests
# =================================================================================================
[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]
